# llvm2

./: .ai_template_version  .dscanignore  .gh_apps_creds.enc  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .sync_manifest  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GEMINI.md  IDEAS.md  INTEGRITY.json  LICENSE  README.md  SUPPORT.md  VISION.md  looper.py  requirements.txt  ruff.toml
crates/llvm2-cli/: Cargo.toml
crates/llvm2-cli/src/: emit_proofs.rs  main.rs
crates/llvm2-cli/tests/: emit_proofs_flag.rs  format_flag.rs  tmir_text_format.rs
crates/llvm2-codegen/: Cargo.toml
crates/llvm2-codegen/benches/: compare_clang.rs  compile_bench.rs  compile_speed.rs
crates/llvm2-codegen/src/: compiler.rs  constant_pool.rs  coreml_emitter.rs  dialect_pipeline.rs  dwarf_cfi.rs  dwarf_info.rs  error.rs  exception_handling.rs  frame.rs  interpreter.rs  jit.rs  jit_cert.rs  layout.rs  lib.rs  lower.rs  metal_emitter.rs  pipeline.rs  relax.rs  target.rs  unwind.rs
crates/llvm2-codegen/tests/: aarch64_encoding.rs  abi_many_args_e2e.rs  compact_unwind_integration.rs  dialect_lower_module.rs  e2e_aarch64_link.rs  e2e_abi_dual_target.rs  e2e_abi_dual_target_linkrun.rs  e2e_bridge.rs  e2e_cegis_superopt.rs  e2e_cli_json.rs  e2e_cli_tmbc.rs  e2e_correctness.rs  e2e_cse_movz_movn.rs  e2e_differential.rs  e2e_elf_link.rs  e2e_full_pipeline.rs  e2e_heterogeneous.rs  e2e_macho_link.rs  e2e_macho_validation.rs  e2e_multiblock_builder.rs  e2e_native_link.rs  e2e_opt_levels.rs  e2e_pipeline.rs  e2e_pipeline_integration.rs  e2e_riscv_elf.rs  e2e_run.rs  e2e_stack_alloc.rs  e2e_triple_oracle.rs  e2e_x86_64_correctness.rs  e2e_x86_64_dispatcher.rs  e2e_x86_64_link.rs  e2e_x86_64_macho.rs  jit_block_counter_lifetime.rs  jit_block_counters.rs  jit_block_counters_and_timing.rs  jit_calling_convention_contract.rs  jit_entry_counters.rs  jit_integration.rs  jit_integration_x86_64.rs  jit_mrs_tpidr.rs  (+19 more)
crates/llvm2-dialect/: Cargo.toml
crates/llvm2-dialect/src/: conversion.rs  dialect.rs  id.rs  lib.rs  machir_emit.rs  module.rs  op.rs  pass.rs  registry.rs
crates/llvm2-dialect/tests/: end_to_end.rs  multi_block_conversion.rs  type_constraints.rs
crates/llvm2-fuzz/: Cargo.toml  README.md
crates/llvm2-fuzz/src/: lib.rs  prng.rs  runlog.rs  tmir_gen.rs
crates/llvm2-gpu/: Cargo.toml
crates/llvm2-gpu/src/: address_space.rs  divergence_flatten.rs  hetero_partition.rs  kernel_extract.rs  launch_synth.rs  lib.rs  memory_partition.rs  pipeline.rs  region.rs  sample_bfs.rs
crates/llvm2-gpu/tests/: end_to_end_bfs.rs  passes_end_to_end.rs
crates/llvm2-ir/: Cargo.toml
crates/llvm2-ir/src/: aarch64_regs.rs  cc.rs  cost_model.rs  function.rs  inst.rs  lib.rs  operand.rs  provenance.rs  regs.rs  riscv_ops.rs  riscv_regs.rs  target_info.rs  tls.rs  trace.rs  type_hierarchy.rs  types.rs  x86_64_ops.rs  x86_64_regs.rs
crates/llvm2-ir/tests/: core_types.rs
crates/llvm2-llvm-import/: Cargo.toml  README.md
crates/llvm2-llvm-import/src/: lib.rs  parser.rs
crates/llvm2-llvm-import/tests/: fp_e2e.rs  switch_e2e.rs
crates/llvm2-lower/: Cargo.toml
crates/llvm2-lower/src/: abi.rs  adapter.rs  compute_graph.rs  dispatch.rs  function.rs  instructions.rs  isel.rs  lib.rs  overflow_idiom.rs  smulh_idiom.rs  switch.rs  target_analysis.rs  tmir_compat.rs  types.rs  va_list.rs  x86_64_isel.rs
crates/llvm2-lower/tests/: aggregate_constants.rs  aggregate_lowering.rs  aggregate_types.rs  panic_fuzz_lower.proptest-regressions  panic_fuzz_lower.rs  tmir_integration.rs
crates/llvm2-opt/: Cargo.toml
crates/llvm2-opt/src/: addr_mode.rs  cache.rs  cfg_simplify.rs  cmp_branch_fusion.rs  cmp_select.rs  const_fold.rs  const_materialize.rs  copy_prop.rs  cse.rs  dce.rs  dom.rs  effects.rs  gvn.rs  if_convert.rs  inline.rs  interfaces.rs  lib.rs  licm.rs  loop_unroll.rs  loops.rs  pass_manager.rs  passes.rs  peephole.rs  pipeline.rs  proof_opts.rs  scheduler.rs  sroa.rs  strength_reduce.rs  tail_call.rs  vectorize.rs
crates/llvm2-opt/tests/: aggregate_pipeline.rs  cache_backends.rs  cache_stable_hash.rs  pgo_round_trip.rs  regression_convergence.rs  sroa_pipeline.rs
crates/llvm2-regalloc/: Cargo.toml
crates/llvm2-regalloc/src/: call_clobber.rs  coalesce.rs  greedy.rs  lib.rs  linear_scan.rs  liveness.rs  machine_types.rs  phi_elim.rs  post_ra_coalesce.rs  post_ra_opt.rs  remat.rs  spill.rs  spill_slot_reuse.rs  split.rs  x86_adapter.rs
crates/llvm2-test/: Cargo.toml  README.md
crates/llvm2-test/src/: config.rs  corpus.rs  external.rs  main.rs  progress.rs  results.rs  shell.rs
crates/llvm2-test/tests/: cli.rs  schema.rs
crates/llvm2-verify/: Cargo.toml  README.md
crates/llvm2-verify/src/: aarch64_semantics.rs  addr_mode_proofs.rs  ane_precision_proofs.rs  ane_semantics.rs  atomic_proofs.rs  call_lowering_proofs.rs  cegis.rs  cegis_pass.rs  cfg_proofs.rs  cmp_combine_proofs.rs  const_fold_proofs.rs  const_materialize_proofs.rs  copy_prop_proofs.rs  cse_licm_proofs.rs  dce_proofs.rs  ext_trunc_proofs.rs  fp_convert_proofs.rs  frame_proofs.rs  fsym_null.rs  function_verifier.rs  gpu_semantics.rs  gvn_proofs.rs  if_convert_proofs.rs  lib.rs  loop_opt_proofs.rs  lowering_proof.rs  macho_proofs.rs  memory_model.rs  memory_proofs.rs  neon_encoding_proofs.rs  neon_lowering_proofs.rs  neon_semantics.rs  nzcv.rs  opt_proofs.rs  peephole_proofs.rs  proof_certificate.rs  proof_database.rs  regalloc_proofs.rs  rule_discovery.rs  scheduler_proofs.rs  (+17 more)
crates/llvm2-verify/tests/: cegis_layer_a.rs  cegis_layer_b.rs  cegis_pass.rs  cegis_stats_trace.rs  full_proof_suite.rs  panic_fuzz_verify.rs  z4_prove_smoke.rs
crates/rustc_codegen_llvm2/: Cargo.toml  README.md  rust-toolchain.toml
crates/rustc_codegen_llvm2/src/: lib.rs
crates/tcrane-codegen/: Cargo.toml
crates/tcrane-frontend/: Cargo.toml
crates/tcrane-ir/: Cargo.toml
crates/tcrane-verify/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_compile_function.rs  fuzz_encode_instruction.rs  fuzz_macho_fixup.rs  fuzz_translate_function.rs  fuzz_verify_module.rs
stubs/tmir-func/: Cargo.toml
stubs/tmir-semantics/: Cargo.toml
(+512 files in other folders)
