# LLVM2
# Verified compiler backend - tMIR to machine code
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/llvm2-ir",
    "crates/llvm2-lower",
    "crates/llvm2-opt",
    "crates/llvm2-verify",
    "crates/llvm2-codegen",
    "crates/llvm2-regalloc",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ayates_dbx/LLVM2"
authors = ["Andrew Yates <ayates@dropbox.com>"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Verification (z4 SMT solver)
# z4 = { git = "https://github.com/ayates_dbx/z4" }

# Input IR (tMIR)
tmir-types = { path = "../tMIR/crates/tmir-types" }
tmir-instrs = { path = "../tMIR/crates/tmir-instrs" }
tmir-func = { path = "../tMIR/crates/tmir-func" }
tmir-semantics = { path = "../tMIR/crates/tmir-semantics" }

# Internal crates
llvm2-ir = { path = "crates/llvm2-ir" }
llvm2-lower = { path = "crates/llvm2-lower" }
llvm2-opt = { path = "crates/llvm2-opt" }
llvm2-verify = { path = "crates/llvm2-verify" }
llvm2-codegen = { path = "crates/llvm2-codegen" }
llvm2-regalloc = { path = "crates/llvm2-regalloc" }
