# LLVM2
# Verified compiler backend - tMIR to machine code
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[workspace]
resolver = "2"
members = [
    "crates/llvm2-ir",
    "crates/llvm2-lower",
    "crates/llvm2-opt",
    "crates/llvm2-verify",
    "crates/llvm2-codegen",
    "crates/llvm2-regalloc",
    "crates/llvm2-cli",
    # stubs/ kept but removed from workspace — being replaced by real tmir
]
exclude = [
    "stubs/tmir-types",
    "stubs/tmir-instrs",
    "stubs/tmir-func",
    "stubs/tmir-semantics",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ayates_dbx/LLVM2"
authors = ["Andrew Yates <ayates@dropbox.com>"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Verification (z4 SMT solver)
# For git dep: z4 = { git = "https://github.com/ayates_dbx/z4" }
z4 = { path = "/Users/ayates/z4/crates/z4" }
z4-chc = { path = "/Users/ayates/z4/crates/z4-chc" }

# Input IR (tMIR) — real crate from the tMIR repo.
tmir = { git = "ssh://git@github.com/dropbox-ai-prototypes/tMIR.git", rev = "f9b132a", features = ["serde"] }
tmir-build = { git = "ssh://git@github.com/dropbox-ai-prototypes/tMIR.git", rev = "f9b132a" }

# Internal crates
llvm2-ir = { path = "crates/llvm2-ir" }
llvm2-lower = { path = "crates/llvm2-lower" }
llvm2-opt = { path = "crates/llvm2-opt" }
llvm2-verify = { path = "crates/llvm2-verify" }
llvm2-codegen = { path = "crates/llvm2-codegen" }
llvm2-regalloc = { path = "crates/llvm2-regalloc" }
