# llvm2-codegen - Verified machine code generation
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-codegen"
description = "Verified machine code generation for LLVM2 (x86-64, AArch64, RISC-V)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
llvm2-ir = { workspace = true }
llvm2-lower = { workspace = true }
llvm2-opt = { workspace = true }
llvm2-regalloc = { workspace = true }
llvm2-verify = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tmir-types = { workspace = true }
tmir-instrs = { workspace = true }
tmir-func = { workspace = true }

[[bench]]
name = "compile_bench"
harness = false
