# llvm2-codegen - Verified machine code generation
#
# Author: Andrew Yates <andrewyates.name@gmail.com>
# Copyright 2026 Andrew Yates | License: Apache-2.0

[package]
name = "llvm2-codegen"
description = "Verified machine code generation for LLVM2 (x86-64, AArch64, RISC-V)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = ["verify"]
verify = ["dep:llvm2-verify"]

[dependencies]
llvm2-ir = { workspace = true }
llvm2-dialect = { workspace = true }
llvm2-lower = { workspace = true }
llvm2-opt = { workspace = true }
llvm2-regalloc = { workspace = true }
llvm2-verify = { workspace = true, optional = true }
tmir = { workspace = true }
tmir-build = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
rayon = "1.10"

[dev-dependencies]
# Property-based testing for the `.tmbc` round-trip harness (#415).
# proptest is dev-only; it MUST NOT leak into the production graph.
proptest = "1.7"

[[bench]]
name = "compile_bench"
harness = false

[[bench]]
name = "compare_clang"
harness = false

[[bench]]
name = "compile_speed"
harness = false

[lints]
workspace = true
