# llvm2-ir - Shared machine model (registers, operands, instructions)
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-ir"
description = "Shared machine model for LLVM2: registers, operands, MachInst, stack slots"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
