# llvm2-lower - tMIR to LIR lowering
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-lower"
description = "tMIR to Low-level IR lowering for LLVM2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# tMIR (input IR) — stub crates for development
tmir-types = { workspace = true }
tmir-instrs = { workspace = true }
tmir-func = { workspace = true }

# Utilities
serde = { workspace = true }
thiserror = { workspace = true }
