# llvm2-lower - tMIR to LIR lowering
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-lower"
description = "tMIR to Low-level IR lowering for LLVM2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Shared machine IR model (canonical type definitions)
llvm2-ir = { workspace = true }

# tMIR (input IR) — real crate from tMIR repo
tmir = { workspace = true }
tmir-build = { workspace = true }

# Utilities
serde = { workspace = true }
thiserror = { workspace = true }
