# llvm2-opt - Verified optimizations
#
# Author: Andrew Yates <andrewyates.name@gmail.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-opt"
description = "Verified optimization passes for LLVM2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
llvm2-ir = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
