# llvm2-regalloc - Register allocation for LLVM2
#
# Author: Andrew Yates <andrewyates.name@gmail.com>
# Copyright 2026 Andrew Yates | License: Apache-2.0

[package]
name = "llvm2-regalloc"
description = "Liveness analysis and register allocation for LLVM2"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Shared machine IR model (canonical type definitions)
llvm2-ir = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
