# llvm2-test — the unified LLVM2 test & verification CLI
#
# Author: Andrew Yates <andrewyates.name@gmail.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0
#
# See designs/2026-04-19-proving-llvm2-replaces-llvm.md for the binding design.
# Every workstream (WS1-WS9) writes into `src/cmd/<ws>.rs`. No loose scripts.

[package]
name = "llvm2-test"
description = "Unified test and verification CLI for the LLVM2 verified compiler backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "llvm2-test"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "cargo", "env", "wrap_help"] }
clap_mangen = "0.2"
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { version = "0.8", features = ["chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
toml = "0.8"

[dev-dependencies]
insta = { version = "1", features = ["filters"] }
assert_cmd = "2"
tempfile = "3"
