# llvm2-verify - Verification backend
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-verify"
description = "Verification backend for LLVM2 using SMT solving (z4)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# z4 feature: enables in-process z4 Rust API (requires z4 crate).
# Without this feature, verification uses CLI subprocess fallback (z4_bridge.rs).
# To enable: `cargo test -p llvm2-verify --features z4`.
z4 = ["dep:z4"]

[dependencies]
llvm2-ir = { workspace = true }
llvm2-lower = { workspace = true }
thiserror = { workspace = true }
# z4 dependency: path dep to local z4 checkout (replaces git dep from #175).
# Path deps are only resolved when the feature is enabled, so this does NOT
# block workspace compilation when z4 is not needed.
z4 = { path = "/Users/ayates/z4/crates/z4", optional = true }
