# llvm2-verify - Verification backend
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "llvm2-verify"
description = "Verification backend for LLVM2 using SMT solving (z4)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
# z4 feature: enables in-process z4 Rust API (requires z4 crate).
# Without this feature, verification uses CLI subprocess fallback (z4_bridge.rs).
# To enable: `cargo test -p llvm2-verify --features z4`.
z4 = ["dep:z4", "dep:z4-chc"]

[dependencies]
llvm2-ir = { workspace = true }
llvm2-lower = { workspace = true }
thiserror = { workspace = true }
# z4 SMT solver: optional, enabled via the `z4` feature above.
# Uses workspace path dep (~/z4/crates/z4) for local development.
z4 = { workspace = true, optional = true }
z4-chc = { workspace = true, optional = true }
