# tcrane-ir - Cranelift IR representation
#
# Author: Andrew Yates <ayates@dropbox.com>
# Copyright 2026 Dropbox, Inc. | License: Apache-2.0

[package]
name = "tcrane-ir"
description = "Cranelift IR types and data structures for tCrane"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
